test/parsetest/valid/multidim_array.java
class Valid3 {
	public int[][][][][][][][][][][][][][][][][][] a;

	public static void main(String[] args) {
	}
}