test/parsetest/invalid/object_creation.java
class A {

  public static void main(String[] args) {
    int a = new int();
  }
}